# cpp-company-project

./: .copilotignore  CMakeLists.txt  README.md  build-and-test.md  compile.md  copilot-review-instructions.json  regen.md  sync-repo.ps1
.github/: copilot-instructions.md
.github/workflows/: CI.md  CI.yml  build_and_test.yml
copilot-config/: copilot-review-selection.json
links/: notes.md
notes/: copilot-code-generation-instructions.md
sql/: README.md  company_db.sql  model.md
src/: README.md  TODO.md  company.cpp  company.h  department.cpp  department.h  developer.cpp  developer.h  employee.cpp  employee.h  manager.cpp  manager.h  project.cpp  project.h
tests/: compile.md  test_company.cpp  test_department.cpp  test_developer.cpp  test_employee.cpp  test_manager.cpp
